--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,7 +15,7 @@ ul{
 .header{
     width: 100%;
     height: 100vh;
-    background-color: blue;
+    background-color: yellowgreen;
 } 
 
 .nav{
@@ -31,7 +31,7 @@ ul{
 
 } 
 .nav-logo{
-    color: white;
+    color: black;
     font-size: 50px;
     font-weight: 700;
     text-transform: uppercase;
@@ -41,7 +41,7 @@ ul{
     column-gap: 30px;
 } 
 .nav-link{
-    color: white;
+    color:blue;
     font-size: 35px;
     text-transform: capitalize
 }
